work in progress on idaholab/Malcolm#254

--- a/scripts/third-party-environments/virter/malcolm-setup-00-apt-init.toml
+++ b/scripts/third-party-environments/virter/malcolm-setup-00-apt-init.toml
@@ -18,6 +18,7 @@ sudo apt-get -y -q --no-install-recommends install \
     dtrx \
     fd-find \
     file \
+    gawk \
     git \
     gpg \
     iproute2 \
