for idaholab/Malcolm#254, specify host to capture if provided

--- a/arkime/supervisord.conf
+++ b/arkime/supervisord.conf
@@ -56,6 +56,7 @@ command=python3 /opt/pcap_arkime_processor.py %(ENV_PCAP_PIPELINE_VERBOSITY)s
   --publisher "%(ENV_PCAP_MONITOR_HOST)s"
   --pcap-directory /data/pcap/processed
   --node "%(ENV_PCAP_NODE_NAME)s"
+  --host "%(ENV_PCAP_NODE_HOST)s"
   --arkime /opt/arkime/bin/capture
   --autotag "%(ENV_AUTO_TAG)s"
   --managed "%(ENV_MANAGE_PCAP_FILES)s"
