--- a/config/upload-common.env.example
+++ b/config/upload-common.env.example
@@ -4,6 +4,9 @@ AUTO_TAG=true
 # The node name (e.g., the hostname of this machine running Malcolm) to associate with
 #   network traffic metadata
 PCAP_NODE_NAME=malcolm
+# The node host (e.g., the IP address of the machine running Malcolm) to associate with
+#   network traffic metadata (optional, defaults to PCAP_NODE_NAME if unspecified)
+PCAP_NODE_HOST=
 # Verbosity flag for pcap pipeline debugging (e.g., -v, -vv, -vvv, etc.)
 PCAP_PIPELINE_VERBOSITY=
 # Whether or not PCAP files extant in ./pcap/ will be ignored on startup
