idaholab/Malcolm#267, make sure autostart/autorestart are explicitly set

--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -26,6 +26,7 @@ command=/usr/local/bin/zeek_carve_watcher.py %(ENV_EXTRACTED_FILE_PIPELINE_VERBO
   --max-bytes %(ENV_EXTRACTED_FILE_MAX_BYTES)s
   --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
 autostart=true
+autorestart=true
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
 stopasgroup=true
@@ -44,6 +45,7 @@ command=/usr/local/bin/vtot_scan.py %(ENV_EXTRACTED_FILE_PIPELINE_VERBOSITY)s
   --vtot-api %(ENV_VTOT_API2_KEY)s
   --req-limit %(ENV_VTOT_REQUESTS_PER_MINUTE)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_VTOT)s
+autorestart=%(ENV_EXTRACTED_FILE_ENABLE_VTOT)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
 stopasgroup=true
@@ -60,6 +62,7 @@ command=/usr/local/bin/clam_scan.py %(ENV_EXTRACTED_FILE_PIPELINE_VERBOSITY)s
   --clamav-socket "%(ENV_CLAMD_SOCKET_FILE)s"
   --req-limit %(ENV_CLAMD_MAX_REQUESTS)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
+autorestart=%(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
 stopasgroup=true
@@ -76,6 +79,7 @@ command=/usr/local/bin/yara_scan.py %(ENV_EXTRACTED_FILE_PIPELINE_VERBOSITY)s
   --yara-custom-only %(ENV_EXTRACTED_FILE_YARA_CUSTOM_ONLY)s
   --req-limit %(ENV_YARA_MAX_REQUESTS)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_YARA)s
+autorestart=%(ENV_EXTRACTED_FILE_ENABLE_YARA)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
 stopasgroup=true
@@ -92,6 +96,7 @@ command=/usr/local/bin/capa_scan.py %(ENV_EXTRACTED_FILE_PIPELINE_VERBOSITY)s
   --capa-verbose %(ENV_EXTRACTED_FILE_CAPA_VERBOSE)s
   --req-limit %(ENV_CAPA_MAX_REQUESTS)s
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_CAPA)s
+autorestart=%(ENV_EXTRACTED_FILE_ENABLE_CAPA)s
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
 stopasgroup=true
@@ -108,6 +113,7 @@ command=/usr/local/bin/zeek_carve_logger.py %(ENV_EXTRACTED_FILE_PIPELINE_VERBOS
   --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
   --zeek-log "%(ENV_ZEEK_LOG_DIRECTORY)s"
 autostart=true
+autorestart=true
 startsecs=%(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
 startretries=0
 stopasgroup=true
@@ -120,7 +126,7 @@ redirect_stderr=true
 [program:freshclam]
 command=/usr/bin/freshclam freshclam --config-file=/etc/clamav/freshclam.conf --daemon
 autostart=%(ENV_EXTRACTED_FILE_UPDATE_RULES)s
-autorestart=true
+autorestart=%(ENV_EXTRACTED_FILE_UPDATE_RULES)s
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -133,7 +139,7 @@ redirect_stderr=true
 [program:clamd]
 command=/usr/sbin/clamd -c /etc/clamav/clamd.conf
 autostart=%(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
-autorestart=true
+autorestart=%(ENV_EXTRACTED_FILE_ENABLE_CLAMAV)s
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -149,7 +155,7 @@ command=/usr/local/bin/zeek_carved_http_server.py
   --encrypt %(ENV_EXTRACTED_FILE_HTTP_SERVER_ENCRYPT)s
   --directory /zeek/extract_files
 autostart=%(ENV_EXTRACTED_FILE_HTTP_SERVER_ENABLE)s
-autorestart=true
+autorestart=%(ENV_EXTRACTED_FILE_HTTP_SERVER_ENABLE)s
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -160,8 +166,9 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:cron]
-autorestart=true
 command=/usr/local/bin/supercronic -json "%(ENV_SUPERCRONIC_CRONTAB)s"
+autostart=true
+autorestart=true
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
