--- a/filebeat/supervisord.conf
+++ b/filebeat/supervisord.conf
@@ -22,6 +22,8 @@ command=/usr/local/bin/docker-entrypoint -e --strict.perms=false
 user=%(ENV_PUSER)s
 startsecs=0
 startretries=0
+autostart=true
+autorestart=true
 stopasgroup=true
 killasgroup=true
 directory=/usr/share/filebeat
@@ -38,6 +40,7 @@ command=bash -c "/usr/local/bin/opensearch_status.sh -t malcolm_beats_template &
   --modules nginx"
 user=%(ENV_PUSER)s
 autostart=%(ENV_NGINX_LOG_ACCESS_AND_ERRORS)s
+autorestart=%(ENV_NGINX_LOG_ACCESS_AND_ERRORS)s
 startsecs=30
 startretries=2000000000
 stopasgroup=true
@@ -55,6 +58,7 @@ command=bash -c "/usr/local/bin/opensearch_status.sh -t malcolm_beats_template &
   -c /usr/share/filebeat-tcp/filebeat-tcp.yml"
 user=%(ENV_PUSER)s
 autostart=%(ENV_FILEBEAT_TCP_LISTEN)s
+autorestart=%(ENV_FILEBEAT_TCP_LISTEN)s
 startsecs=30
 startretries=2000000000
 stopasgroup=true
@@ -76,6 +80,8 @@ command=python3 /usr/local/bin/filebeat-watch-zeeklogs-uploads-folder.py %(ENV_P
 user=root
 startsecs=35
 startretries=1
+autostart=true
+autorestart=true
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
@@ -83,9 +89,10 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:cron]
-autorestart=true
 command=/usr/local/bin/supercronic -json "%(ENV_SUPERCRONIC_CRONTAB)s"
 user=%(ENV_PUSER)s
+autostart=true
+autorestart=true
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
