--- a/freq-server/supervisord.conf
+++ b/freq-server/supervisord.conf
@@ -20,6 +20,8 @@ serverurl=unix:///tmp/supervisor.sock
 command=/usr/bin/python3 /opt/freq_server/freq_server.py
   -ip 0.0.0.0 %(ENV_FREQ_API_PORT)s
   /opt/freq_server/freq_table.freq
+autostart=true
+autorestart=true
 startsecs=5
 startretries=2000000000
 stopasgroup=true
