--- a/htadmin/supervisord.conf
+++ b/htadmin/supervisord.conf
@@ -18,12 +18,16 @@ serverurl=unix:///tmp/supervisor.sock
 
 [program:php]
 command=php-fpm7.4 -F -R -g /tmp/php-fpm.pid
+autostart=true
+autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:nginx]
 command=/bin/bash /usr/local/bin/htadmin.sh
+autostart=true
+autorestart=true
 startsecs=15
 stopasgroup=true
 killasgroup=true
