--- a/logstash/supervisord.conf
+++ b/logstash/supervisord.conf
@@ -19,6 +19,7 @@ serverurl=http://127.0.0.1:9001
 [program:logstash]
 command=/usr/local/bin/logstash-start.sh
 autostart=true
+autorestart=true
 startsecs=0
 startretries=0
 stopwaitsecs=60
