--- a/netbox/supervisord.conf
+++ b/netbox/supervisord.conf
@@ -81,7 +81,7 @@ redirect_stderr=true
 [program:cron]
 command=/usr/local/bin/supercronic -json "%(ENV_SUPERCRONIC_CRONTAB)s"
 autostart=%(ENV_NETBOX_CRON)s
-autorestart=true
+autorestart=%(ENV_NETBOX_CRON)s
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
