--- a/nginx/supervisord.conf
+++ b/nginx/supervisord.conf
@@ -18,6 +18,8 @@ serverurl=unix:///tmp/supervisor.sock
 
 [program:nginx]
 command=/usr/sbin/nginx
+autostart=true
+autorestart=true
 startsecs=10
 startretries=2000000000
 stopasgroup=true
@@ -29,6 +31,8 @@ redirect_stderr=true
 [program:logaccess]
 command=/usr/bin/tail -F /var/log/nginx/access.log
 user=%(ENV_PUSER)s
+autostart=true
+autorestart=true
 startsecs=10
 startretries=2000000000
 stopasgroup=true
@@ -42,6 +46,8 @@ redirect_stderr=false
 [program:logerrors]
 command=/usr/bin/tail -F /var/log/nginx/error.log
 user=%(ENV_PUSER)s
+autostart=true
+autorestart=true
 startsecs=10
 startretries=2000000000
 stopasgroup=true
@@ -54,6 +60,8 @@ redirect_stderr=false
 
 [program:stunnel]
 command=/usr/bin/stunnel /etc/stunnel/stunnel.conf
+autostart=%(ENV_NGINX_LDAP_TLS_STUNNEL)s
+autorestart=%(ENV_NGINX_LDAP_TLS_STUNNEL)s
 startsecs=10
 startretries=2000000000
 stopasgroup=true
@@ -61,4 +69,3 @@ killasgroup=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-autostart=%(ENV_NGINX_LDAP_TLS_STUNNEL)s
