--- a/pcap-capture/supervisord.conf
+++ b/pcap-capture/supervisord.conf
@@ -27,6 +27,7 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 autostart=%(ENV_PCAP_ENABLE_NETSNIFF)s
+autorestart=%(ENV_PCAP_ENABLE_NETSNIFF)s
 directory=%(ENV_PCAP_PATH)s
 
 [include]
