--- a/pcap-monitor/supervisord.conf
+++ b/pcap-monitor/supervisord.conf
@@ -27,6 +27,8 @@ command=python3 /usr/local/bin/watch-pcap-uploads-folder.py %(ENV_PCAP_PIPELINE_
   --zeek "%(ENV_ZEEK_PATH)s"/upload
   --uid %(ENV_PUID)s
   --gid %(ENV_PGID)s
+autostart=true
+autorestart=true
 startsecs=35
 startretries=10
 stopasgroup=true
@@ -48,6 +50,8 @@ command=python3 /usr/local/bin/pcap_watcher.py %(ENV_PCAP_PIPELINE_VERBOSITY)s
   --start-sleep 60
   --directory "%(ENV_PCAP_PATH)s"/processed
 user=%(ENV_PUSER)s
+autostart=true
+autorestart=true
 startsecs=65
 startretries=10
 stopasgroup=true
