--- a/sensor-iso/interface/sensor_ctl/supervisor.d/arkime.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/arkime.conf
@@ -13,6 +13,7 @@ startretries=2000000000
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_ARKIME)s
+autorestart=%(ENV_AUTOSTART_ARKIME)s
 directory=/opt/arkime/viewer
 
 [program:arkime-capture]
@@ -36,9 +37,9 @@ command=/opt/arkime/bin/capture %(ENV_ARKIME_HTTPS_FLAG)s
   --host "%(ENV_ARKIME_NODE_HOST)s"
 startsecs=30
 startretries=2000000000
-autorestart=true
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_ARKIME)s
+autorestart=%(ENV_AUTOSTART_ARKIME)s
 directory=%(ENV_PCAP_PATH)s
 user=sensor
