--- a/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/beats.conf
@@ -9,6 +9,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FILEBEAT)s
+autorestart=%(ENV_AUTOSTART_FILEBEAT)s
 directory=%(ENV_SUPERVISOR_PATH)s/filebeat
 
 [program:miscbeat]
@@ -18,4 +19,5 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_MISCBEAT)s
+autorestart=%(ENV_AUTOSTART_MISCBEAT)s
 directory=%(ENV_SUPERVISOR_PATH)s/miscbeat
