--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-metrics.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-metrics.conf
@@ -15,6 +15,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
 
 [program:disk]
 command=/opt/fluent-bit/bin/fluent-bit
@@ -30,6 +31,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
 
 [program:mem]
 command=/opt/fluent-bit/bin/fluent-bit
@@ -45,6 +47,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
 
 [program:mem_p]
 command=/opt/fluent-bit/bin/fluent-bit
@@ -62,6 +65,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
 
 [program:df]
 command=/opt/fluent-bit/bin/fluent-bit
@@ -80,6 +84,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
 
 [program:netif]
 command=/opt/fluent-bit/bin/fluent-bit
@@ -98,3 +103,4 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_METRICS)s
