--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-thermal.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-thermal.conf
@@ -12,3 +12,4 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_THERMAL)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_THERMAL)s
