--- a/sensor-iso/interface/sensor_ctl/supervisor.d/prune.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/prune.conf
@@ -8,6 +8,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_PRUNE_PCAP)s
+autorestart=%(ENV_AUTOSTART_PRUNE_PCAP)s
 directory=%(ENV_PCAP_PATH)s
 
 [program:prune-zeek]
@@ -17,4 +18,5 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_PRUNE_ZEEK)s
+autorestart=%(ENV_AUTOSTART_PRUNE_ZEEK)s
 directory=%(ENV_ZEEK_LOG_PATH)s
