--- a/sensor-iso/interface/sensor_ctl/supervisor.d/suricata.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/suricata.conf
@@ -7,7 +7,7 @@ command=/usr/bin/suricata
   --af-packet
 user=sensor
 autostart=%(ENV_AUTOSTART_SURICATA)s
-autorestart=true
+autorestart=%(ENV_AUTOSTART_SURICATA)s
 startsecs=0
 startretries=0
 stopasgroup=true
