--- a/sensor-iso/interface/sensor_ctl/supervisor.d/zeek.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/zeek.conf
@@ -9,6 +9,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_ZEEK)s
+autorestart=%(ENV_AUTOSTART_ZEEK)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
@@ -23,6 +24,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_ZEEK_FILE_WATCH)s
+autorestart=%(ENV_ZEEK_FILE_WATCH)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
@@ -36,6 +38,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_ZEEK_FILE_SCAN_VTOT)s
+autorestart=%(ENV_ZEEK_FILE_SCAN_VTOT)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
@@ -50,6 +53,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_ZEEK_FILE_SCAN_CLAMAV)s
+autorestart=%(ENV_ZEEK_FILE_SCAN_CLAMAV)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
@@ -64,6 +68,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_ZEEK_FILE_SCAN_YARA)s
+autorestart=%(ENV_ZEEK_FILE_SCAN_YARA)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
@@ -78,6 +83,7 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_ZEEK_FILE_SCAN_CAPA)s
+autorestart=%(ENV_ZEEK_FILE_SCAN_CAPA)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
 
@@ -92,5 +98,6 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_ZEEK_FILE_WATCH)s
+autorestart=%(ENV_ZEEK_FILE_WATCH)s
 directory=%(ENV_ZEEK_LOG_PATH)s
 user=sensor
