--- a/zeek/supervisord.conf
+++ b/zeek/supervisord.conf
@@ -31,7 +31,7 @@ command=python3 /usr/local/bin/pcap_zeek_processor.py %(ENV_PCAP_PIPELINE_VERBOS
   --extract "%(ENV_ZEEK_EXTRACTOR_MODE)s"
   --zeek-directory /zeek/upload
 autostart=%(ENV_ZEEK_PCAP_PROCESSOR)s
-autorestart=true
+autorestart=%(ENV_ZEEK_PCAP_PROCESSOR)s
 startsecs=15
 startretries=1
 stopasgroup=true
@@ -44,7 +44,7 @@ user=%(ENV_PUSER)s
 [program:cron]
 command=/usr/local/bin/supercronic -json "%(ENV_SUPERCRONIC_CRONTAB)s"
 autostart=%(ENV_ZEEK_CRON)s
-autorestart=true
+autorestart=%(ENV_ZEEK_CRON)s
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
@@ -55,7 +55,7 @@ user=%(ENV_PUSER)s
 [program:live-zeek]
 command=/opt/zeek/bin/zeekdeploy.sh
 autostart=%(ENV_ZEEK_LIVE_CAPTURE)s
-autorestart=true
+autorestart=%(ENV_ZEEK_LIVE_CAPTURE)s
 startsecs=180
 stopwaitsecs=15
 startretries=3
