--- a/arkime/supervisord.conf
+++ b/arkime/supervisord.conf
@@ -20,6 +20,7 @@ serverurl=unix:///tmp/supervisor.sock
 command=/opt/initarkime.sh
 startsecs=0
 startretries=0
+autostart=true
 autorestart=false
 stopasgroup=true
 killasgroup=true
@@ -32,6 +33,8 @@ redirect_stderr=true
 command=/opt/wise_service.sh
 startsecs=0
 startretries=0
+autostart=true
+autorestart=true
 stopasgroup=true
 killasgroup=true
 directory=%(ENV_ARKIME_DIR)s/wiseService
@@ -42,6 +45,8 @@ redirect_stderr=true
 command=/opt/viewer_service.sh
 startsecs=0
 startretries=0
+autostart=true
+autorestart=true
 stopasgroup=true
 killasgroup=true
 directory=%(ENV_ARKIME_DIR)s
@@ -62,6 +67,8 @@ command=python3 /opt/pcap_arkime_processor.py %(ENV_PCAP_PIPELINE_VERBOSITY)s
   --managed "%(ENV_MANAGE_PCAP_FILES)s"
 startsecs=15
 startretries=1
+autostart=true
+autorestart=true
 stopasgroup=true
 killasgroup=true
 directory=%(ENV_ARKIME_DIR)s
