--- a/file-upload/supervisord.conf
+++ b/file-upload/supervisord.conf
@@ -18,6 +18,8 @@ serverurl=unix:///tmp/supervisor.sock
 
 [program:sshd]
 command=/usr/sbin/sshd -D
+autostart=true
+autorestart=true
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
@@ -26,6 +28,8 @@ redirect_stderr=true
 
 [program:php]
 command=php-fpm8.2 -F -R -g /tmp/php-fpm.pid
+autostart=true
+autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
@@ -33,6 +37,8 @@ redirect_stderr=true
 [program:nginx]
 command=/bin/bash -c "sleep 10 && nginx -g \"daemon off;\""
 startsecs=15
+autostart=true
+autorestart=true
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
@@ -40,9 +46,10 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:cron]
-autorestart=true
 command=/usr/local/bin/supercronic -json "%(ENV_SUPERCRONIC_CRONTAB)s"
 user=%(ENV_PUSER)s
+autostart=true
+autorestart=true
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
