--- a/sensor-iso/interface/sensor_ctl/supervisor.d/clamav.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/clamav.conf
@@ -5,7 +5,7 @@ programs=clamav-service,clamav-updates
 command=/usr/bin/freshclam freshclam --user sensor --config-file=/etc/clamav/freshclam.conf --daemon
 user=sensor
 autostart=%(ENV_AUTOSTART_CLAMAV_UPDATES)s
-autorestart=true
+autorestart=%(ENV_AUTOSTART_CLAMAV_UPDATES)s
 startsecs=0
 startretries=0
 stopasgroup=true
@@ -15,7 +15,7 @@ killasgroup=true
 command=/usr/sbin/clamd -c /etc/clamav/clamd.conf
 user=sensor
 autostart=%(ENV_ZEEK_FILE_SCAN_CLAMAV)s
-autorestart=true
+autorestart=%(ENV_ZEEK_FILE_SCAN_CLAMAV)s
 startsecs=0
 startretries=0
 stopasgroup=true
