--- a/sensor-iso/interface/sensor_ctl/supervisor.d/documentation.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/documentation.conf
@@ -1,9 +1,10 @@
 [program:documentation]
 command=python3 -m http.server --directory /usr/share/doc/hedgehog %(ENV_DOCUMENTATION_PORT)s
+autostart=true
+autorestart=true
 startsecs=5
 startretries=3
 stopasgroup=true
 killasgroup=true
-autostart=true
 directory=/usr/share/doc/hedgehog
 user=sensor
