--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-aide.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-aide.conf
@@ -16,3 +16,4 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_AIDE)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_AIDE)s
