--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-auditlog.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-auditlog.conf
@@ -17,3 +17,4 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_AUDITLOG)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_AUDITLOG)s
