--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-kmsg.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-kmsg.conf
@@ -11,3 +11,4 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_KMSG)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_KMSG)s
