--- a/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-syslog.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/fluentbit-syslog.conf
@@ -18,3 +18,4 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_FLUENTBIT_SYSLOG)s
+autorestart=%(ENV_AUTOSTART_FLUENTBIT_SYSLOG)s
