--- a/sensor-iso/interface/sensor_ctl/supervisor.d/netsniff.template
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/netsniff.template
@@ -5,5 +5,6 @@ startretries=3
 stopasgroup=true
 killasgroup=true
 autostart=%(ENV_AUTOSTART_NETSNIFF)s
+autorestart=%(ENV_AUTOSTART_NETSNIFF)s
 directory=%(ENV_PCAP_PATH)s
 user=sensor
