--- a/suricata/supervisord.conf
+++ b/suricata/supervisord.conf
@@ -31,6 +31,7 @@ command=python3 /usr/local/bin/pcap_suricata_processor.py %(ENV_PCAP_PIPELINE_VE
   --suricata-config "%(ENV_SURICATA_CONFIG_FILE)s"
   --suricata-directory "%(ENV_SURICATA_LOG_DIR)s"
 autostart=%(ENV_SURICATA_PCAP_PROCESSOR)s
+autorestart=%(ENV_SURICATA_PCAP_PROCESSOR)s
 startsecs=15
 startretries=1
 stopasgroup=true
@@ -41,9 +42,9 @@ redirect_stderr=true
 user=%(ENV_PUSER)s
 
 [program:cron]
-autorestart=true
-autostart=%(ENV_SURICATA_CRON)s
 command=/usr/local/bin/supercronic -json "%(ENV_SUPERCRONIC_CRONTAB)s"
+autostart=%(ENV_SURICATA_CRON)s
+autorestart=%(ENV_SURICATA_CRON)s
 user=%(ENV_PUSER)s
 stopasgroup=true
 killasgroup=true
@@ -60,7 +61,7 @@ command=/usr/bin/suricata
   --af-packet
 directory=%(ENV_SURICATA_RUN_DIR)s
 autostart=%(ENV_SURICATA_LIVE_CAPTURE)s
-autorestart=true
+autorestart=%(ENV_SURICATA_LIVE_CAPTURE)s
 startsecs=180
 stopwaitsecs=15
 startretries=3
