work in progress for supporting elasticsearch backend

--- a/logstash/pipelines/external/99_opensearch_output.conf
+++ b/logstash/pipelines/external/99_opensearch_output.conf
@@ -1,5 +1,5 @@
 output {
-  opensearch {
+  _MALCOLM_LOGSTASH_SECONDARY_DATASTORE_TYPE_ {
     id => "output_external_opensearch_malcolm"
     hosts => "${OPENSEARCH_SECONDARY_URL}"
     ssl_certificate_verification => "_MALCOLM_LOGSTASH_OPENSEARCH_SECONDARY_SSL_VERIFICATION_"
