--- a/logstash/pipelines/output/99_opensearch_output.conf
+++ b/logstash/pipelines/output/99_opensearch_output.conf
@@ -1,5 +1,5 @@
 output {
-  opensearch {
+  _MALCOLM_LOGSTASH_PRIMARY_DATASTORE_TYPE_ {
     id => "output_opensearch_malcolm"
     hosts => "${OPENSEARCH_URL:http://opensearch:9200}"
     ssl_certificate_verification => "_MALCOLM_LOGSTASH_OPENSEARCH_SSL_VERIFICATION_"
