work in progress

--- a/logstash/pipelines/beats/11_beats_logs.conf
+++ b/logstash/pipelines/beats/11_beats_logs.conf
@@ -545,6 +545,18 @@ filter {
 
     } # if ([miscbeat][syslog])
 
+    if ([miscbeat][thermal]) {
+    #-------------------------------------------------
+    # thermal - https://docs.fluentbit.io/manual/pipeline/inputs/thermal
+
+      if ([miscbeat][thermal][temp]) {
+        # don't bother saving 0.0 temperatures
+        ruby { id => "ruby_miscbeat_thermal_temp_drop_zeroes"
+               code=> "event.cancel unless event.get('[miscbeat][thermal][temp]')&.nonzero?" }
+      }
+
+    } # if ([miscbeat][thermal])
+
     # merge winevtlog and winlog (from fluent-bit)
     if ([miscbeat][winevtlog]) or ([miscbeat][winlog]) {
 
