be explicit with opensearch mode

--- a/pcap-monitor/supervisord.conf
+++ b/pcap-monitor/supervisord.conf
@@ -40,6 +40,7 @@ redirect_stderr=true
 [program:pcap-publisher]
 command=python3 /usr/local/bin/pcap_watcher.py %(ENV_PCAP_PIPELINE_VERBOSITY)s
   --opensearch "%(ENV_OPENSEARCH_URL)s"
+  --opensearch-mode "%(ENV_OPENSEARCH_PRIMARY)s"
   --opensearch-curlrc "%(ENV_OPENSEARCH_CREDS_CONFIG_FILE)s"
   --opensearch-ssl-verify %(ENV_OPENSEARCH_SSL_CERTIFICATE_VERIFICATION)s
   --opensearch-wait
