allow dynamically setting the passwordSecret for the arkime cluster

--- a/config/arkime-secret.env.example
+++ b/config/arkime-secret.env.example
@@ -1,4 +1,8 @@
+# Password hash secret for Arkime viewer cluster (see https://arkime.com/settings)
+ARKIME_PASSWORD_SECRET=Malcolm
+
 # MaxMind GeoIP database update API key (see
 #   https://support.maxmind.com/hc/en-us/articles/4407116112539-Using-License-Keys)
 MAXMIND_GEOIP_DB_LICENSE_KEY=0
+
 K8S_SECRET=True
