--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -20,6 +20,8 @@ export ARKIME_COMPRESSION_LEVEL=0
 # ARKIME_VIEWER_(CERT|KEY) are under "$SUPERVISOR_PATH"/arkime/
 export ARKIME_VIEWER_CERT=viewer.crt
 export ARKIME_VIEWER_KEY=viewer.key
+# Password hash secret for Arkime viewer cluster (see https://arkime.com/settings)
+ARKIME_PASSWORD_SECRET=Malcolm
 
 export DOCUMENTATION_PORT=8420
 export MISCBEAT_PORT=9516
