work in progress for idaholab/Malcolm#245, 'dockerized hedgehog'

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -200,6 +200,8 @@ services:
         hard: -1
     depends_on:
       - opensearch
+    ports:
+      - "127.0.0.1:8005:8005"
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./.opensearch.primary.curlrc:/var/local/curlrc/.opensearch.primary.curlrc:ro
