summary of changes:
* allow specifying ZEEK_ENIP_PORTS environment variable
* fix OPCUA binary .log files to include new host/port/is_orig values

--- a/config/zeek.env.example
+++ b/config/zeek.env.example
@@ -75,4 +75,5 @@ ZEEK_DISABLE_ICS_SYNCHROPHASOR=
 ZEEK_SYNCHROPHASOR_PORTS=
 ZEEK_SYNCHROPHASOR_DETAILED=
 ZEEK_GENISYS_PORTS=
+ZEEK_ENIP_PORTS=
 ZEEK_DISABLE_BEST_GUESS_ICS=true
