--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -81,6 +81,7 @@ export ZEEK_DISABLE_ICS_SYNCHROPHASOR=
 export ZEEK_SYNCHROPHASOR_PORTS=
 export ZEEK_SYNCHROPHASOR_DETAILED=
 export ZEEK_GENISYS_PORTS=
+export ZEEK_ENIP_PORTS=
 export ZEEK_DISABLE_BEST_GUESS_ICS=true
 
 # Suricata
