--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -92,13 +92,18 @@ filter {
             startTimeMs = startTimeStr.nil? ? timeStampMs : (1000*DateTime.parse(startTimeStr).to_time.to_f).round(0)
             endTimeMs = endTimeStr.nil? ? timeStampMs : (1000*DateTime.parse(endTimeStr).to_time.to_f).round(0)
             durationMs = (ageMs > 0) ? ageMs : ((endTimeMs > startTimeMs) ? endTimeMs-startTimeMs : 0)
-            event.set('[@timestamp]', LogStash::Timestamp.at(timpStamp))
             event.set('[timestamp]', timeStampMs)
             event.set('[firstPacket]', startTimeMs)
             event.set('[lastPacket]', endTimeMs)
             event.set('[length]', durationMs)
             event.set('[event][duration]', 1000000*durationMs)
           "
+        }
+
+        # sets the @timestamp field of the event (since target isn't specified)
+        date {
+          id => "date_suricata_set_at_timestamp"
+          match => [ "[firstPacket]", "UNIX_MS" ]
         }
 
         #############################################################################################################################
