Revert "set @timestamp with a date filter"
This reverts commit b8525960c60b3fbb08d34864f2d8ee823ecabac0.

--- a/logstash/pipelines/zeek/12_zeek_mutate.conf
+++ b/logstash/pipelines/zeek/12_zeek_mutate.conf
@@ -106,14 +106,13 @@ filter {
 
     # set firstPacket to timestamp, lastPacket to timestamp + duration
     # timestamp, firstPacket, lastPacket are UNIX epoch milliseconds
-    # set the ts back as something more readable
     ruby {
       id => "ruby_zeek_timestamp_calc"
       init => "require 'time'"
       code => "msTime = (1000*event.get('[zeek][ts]').to_f).round(0)
                event.set('[timestamp]', msTime)
-               event.set('[firstPacket]', msTime)
-               event.set('[zeek][ts]', LogStash::Timestamp.at(Time.strptime(msTime.to_s, '%Q')))"
+               event.set('[@timestamp]', LogStash::Timestamp.at(Time.strptime(msTime.to_s, '%Q')))
+               event.set('[firstPacket]', msTime)"
     }
 
     if ([zeek][conn]) and ([zeek][conn][duration]) {
@@ -135,12 +134,9 @@ filter {
                add_field => { "[length]" => "0" } }
     }
 
-    # sets the @timestamp field of the event (since target isn't specified)
-    date {
-      id => "date_zeek_set_at_timestamp"
-      match => [ "[firstPacket]", "UNIX_MS" ]
-    }
-
+    # set the ts back as something more readable
+    mutate { id => "mutate_replace_zeek_ts"
+             replace => { "[zeek][ts]" => "%{[@timestamp]}" } }
   } # if ([zeek][ts])
 
   # set user and transport- and application-level protocols if specified
