address issues with NetBox database and Logstash's NetBox cache (idaholab/Malcolm#259); restore caching for performance reasons, but decrease TTL significantly and allow it to be specified via environment variable

--- a/logstash/pipelines/enrichment/21_netbox.conf
+++ b/logstash/pipelines/enrichment/21_netbox.conf
@@ -31,6 +31,8 @@ filter {
           "lookup_site_env" => "NETBOX_DEFAULT_SITE"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
+          "cache_size_env" => "LOGSTASH_NETBOX_CACHE_SIZE"
+          "cache_ttl_env" => "LOGSTASH_NETBOX_CACHE_TTL"
         }
       }
       ruby {
@@ -44,6 +46,8 @@ filter {
           "lookup_service" => "false"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
+          "cache_size_env" => "LOGSTASH_NETBOX_CACHE_SIZE"
+          "cache_ttl_env" => "LOGSTASH_NETBOX_CACHE_TTL"
           "autopopulate_env" => "LOGSTASH_NETBOX_AUTO_POPULATE"
           "default_manuf_env" => "NETBOX_DEFAULT_MANUFACTURER"
           "default_dtype_env" => "NETBOX_DEFAULT_DEVICE_TYPE"
@@ -66,6 +70,8 @@ filter {
           "lookup_site_env" => "NETBOX_DEFAULT_SITE"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
+          "cache_size_env" => "LOGSTASH_NETBOX_CACHE_SIZE"
+          "cache_ttl_env" => "LOGSTASH_NETBOX_CACHE_TTL"
         }
       }
       ruby {
@@ -80,6 +86,8 @@ filter {
           "lookup_service_port_source" => "[destination][port]"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
+          "cache_size_env" => "LOGSTASH_NETBOX_CACHE_SIZE"
+          "cache_ttl_env" => "LOGSTASH_NETBOX_CACHE_TTL"
           "autopopulate_env" => "LOGSTASH_NETBOX_AUTO_POPULATE"
           "default_manuf_env" => "NETBOX_DEFAULT_MANUFACTURER"
           "default_dtype_env" => "NETBOX_DEFAULT_DEVICE_TYPE"
