--- a/config/logstash.env.example
+++ b/config/logstash.env.example
@@ -13,5 +13,8 @@ LOGSTASH_REVERSE_DNS=false
 LOGSTASH_NETBOX_ENRICHMENT=false
 # Whether or not unobserved network entities in Logstash data will be used to populate NetBox
 LOGSTASH_NETBOX_AUTO_POPULATE=false
+# Caching parameters for NetBox's LogStash lookups
+LOGSTASH_NETBOX_CACHE_SIZE=1000
+LOGSTASH_NETBOX_CACHE_TTL=30
 # Logstash memory allowance and other Java options
 LS_JAVA_OPTS=-server -Xms2500m -Xmx2500m -Xss1536k -XX:-HeapDumpOnOutOfMemoryError -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true
