Update Zeek to v6.1.0

--- a/config/zeek.env.example
+++ b/config/zeek.env.example
@@ -56,6 +56,7 @@ ZEEK_DISABLE_SPICY_HTTP=true
 ZEEK_DISABLE_SPICY_IPSEC=
 ZEEK_DISABLE_SPICY_LDAP=
 ZEEK_DISABLE_SPICY_OPENVPN=
+ZEEK_DISABLE_SPICY_QUIC=true
 ZEEK_DISABLE_SPICY_STUN=
 ZEEK_DISABLE_SPICY_TAILSCALE=
 ZEEK_DISABLE_SPICY_TFTP=
