--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -62,6 +62,7 @@ export ZEEK_DISABLE_SPICY_HTTP=true
 export ZEEK_DISABLE_SPICY_IPSEC=
 export ZEEK_DISABLE_SPICY_LDAP=
 export ZEEK_DISABLE_SPICY_OPENVPN=
+export ZEEK_DISABLE_SPICY_QUIC=true
 export ZEEK_DISABLE_SPICY_STUN=
 export ZEEK_DISABLE_SPICY_TAILSCALE=
 export ZEEK_DISABLE_SPICY_TFTP=
