--- a/logstash/pipelines/enrichment/21_netbox.conf
+++ b/logstash/pipelines/enrichment/21_netbox.conf
@@ -27,7 +27,7 @@ filter {
         script_params => {
           "source" => "[source][ip]"
           "target" => "[source][segment]"
-          "lookup_type" => "ip_vrf"
+          "lookup_type" => "ip_prefix"
           "lookup_site_env" => "NETBOX_DEFAULT_SITE"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
@@ -66,7 +66,7 @@ filter {
         script_params => {
           "source" => "[destination][ip]"
           "target" => "[destination][segment]"
-          "lookup_type" => "ip_vrf"
+          "lookup_type" => "ip_prefix"
           "lookup_site_env" => "NETBOX_DEFAULT_SITE"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
