--- a/logstash/pipelines/zeek/13_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/13_zeek_normalize.conf
@@ -323,8 +323,17 @@ filter {
              merge => { "[event][action]" => "[@metadata][zeek_ldap_search_action]" } }
   }
 
-  if ([zeek][modbus][func])                      { mutate { id => "mutate_merge_normalize_zeek_modbus_func"
-                                                            merge => { "[event][action]" => "[zeek][modbus][func]" } } }
+  if ([zeek][modbus][func]) {
+    mutate { id => "mutate_gsub_zeek_modbus_master"
+             gsub => [ "[zeek][modbus][func]", "MASTER", "CLIENT" ] }
+    mutate { id => "mutate_gsub_zeek_modbus_slave"
+             gsub => [ "[zeek][modbus][func]", "SLAVE", "SERVER" ] }
+    mutate { id => "mutate_merge_normalize_zeek_modbus_func"
+             merge => { "[event][action]" => "[zeek][modbus][func]" } }
+  }
+
+  if ([zeek][modbus][mei_type]) { mutate { id => "mutate_merge_normalize_zeek_modbus_mei_type"
+                                           merge => { "[event][action]" => "[zeek][modbus][mei_type]" } } }
 
   if ([zeek][mqtt_connect][connect_status]) {
     # this log entry implicitly means "connect"
