--- a/logstash/pipelines/zeek/12_zeek_mutate.conf
+++ b/logstash/pipelines/zeek/12_zeek_mutate.conf
@@ -1020,11 +1020,12 @@ filter {
                split => { "[zeek][modbus_detailed][values]" => "," } }
     }
 
-    # rename a to make correlating modbus easier between logs
+    # rename some fields to make correlating modbus easier between logs
     mutate {
       id => "mutate_rename_modbus_detailed_fields"
       rename => { "[zeek][modbus_detailed][func]" => "[zeek][modbus][func]" }
       rename => { "[zeek][modbus_detailed][unit_id]" => "[zeek][modbus][unit_id]" }
+      rename => { "[zeek][modbus_detailed][trans_id]" => "[zeek][modbus][trans_id]" }
       rename => { "[zeek][modbus_detailed][network_direction]" => "[zeek][modbus][network_direction]" }
     }
 
@@ -1032,13 +1033,28 @@ filter {
     #############################################################################################################################
     # modbus_mask_write_register.log specific logic
 
-    # rename a to make correlating modbus easier between logs
+    # rename some fields to make correlating modbus easier between logs
     mutate {
       id => "mutate_rename_modbus_mask_write_register_fields"
       rename => { "[zeek][modbus_mask_write_register][address]" => "[zeek][modbus_detailed][address]" }
       rename => { "[zeek][modbus_mask_write_register][func]" => "[zeek][modbus][func]" }
       rename => { "[zeek][modbus_mask_write_register][network_direction]" => "[zeek][modbus][network_direction]" }
       rename => { "[zeek][modbus_mask_write_register][unit_id]" => "[zeek][modbus][unit_id]" }
+      rename => { "[zeek][modbus_mask_write_register][trans_id]" => "[zeek][modbus][trans_id]" }
+    }
+
+  } else if ([log_source] == "modbus_read_device_identification") {
+    #############################################################################################################################
+    # modbus_read_device_identification.log specific logic
+
+    # rename some fields to make correlating modbus easier between logs
+    mutate {
+      id => "mutate_rename_modbus_read_device_identification_fields"
+      rename => { "[zeek][modbus_read_device_identification][network_direction]" => "[zeek][modbus][network_direction]" }
+      rename => { "[zeek][modbus_read_device_identification][unit_id]" => "[zeek][modbus][unit_id]" }
+      rename => { "[zeek][modbus_read_device_identification][trans_id]" => "[zeek][modbus][trans_id]" }
+      rename => { "[zeek][modbus_read_device_identification][func]" => "[zeek][modbus][func]" }
+      rename => { "[zeek][modbus_read_device_identification][mei_type]" => "[zeek][modbus][mei_type]" }
     }
 
   } else if ([log_source] == "modbus_read_write_multiple_registers") {
@@ -1055,11 +1071,12 @@ filter {
                split => { "[zeek][modbus_read_write_multiple_registers][write_registers]" => "," } }
     }
 
-    # rename a to make correlating modbus easier between logs
+    # rename some fields to make correlating modbus easier between logs
     mutate {
       id => "mutate_rename_modbus_read_write_multiple_registers_fields"
       rename => { "[zeek][modbus_read_write_multiple_registers][network_direction]" => "[zeek][modbus][network_direction]" }
       rename => { "[zeek][modbus_read_write_multiple_registers][unit_id]" => "[zeek][modbus][unit_id]" }
+      rename => { "[zeek][modbus_read_write_multiple_registers][trans_id]" => "[zeek][modbus][trans_id]" }
       rename => { "[zeek][modbus_read_write_multiple_registers][func]" => "[zeek][modbus][func]" }
     }
 
